<resources>
    <string name="app_name">Random People</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="signup">Sing up</string>
    <string name="username">Username</string>
    <string name="repeatPassword">Repeat password</string>
    <string name="phoneNumber">Phone number</string>
    <string name="createAccount">Create account</string>
    <string name="enterYourEmailAndYourPassword">Enter your Email and your password</string>
    <string name="authentificationFailed">Authentification failed</string>
    <string name="fieldsRequired">All fields are required</string>
    <string name="incorrectEmail">The email adress is not correct</string>
    <string name="password6">The password must be at least 6 characters</string>
    <string name="samePassword">The passwords must be the same</string>
    <string name="registerSuccesfully">Register succesfully</string>
    <string name="existEmail">This email is already registered</string>
    <string name="preferedLanguage">Preferred language for chats</string>
    <string name="dateBirth">Date of birth</string>
    <string name="selectDate">Select a date</string>
    <string name="newRandomChat">Start random chat</string>
    <string name="newChatSimilar">"Start a chat by filtering by criteria"</string>
    <string name="TypeAMessage">Type a message...</string>
    <string name="nonbinary">Non-binary</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="gender">Gender</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="comedy">Comedy</string>
    <string name="crime">Crime</string>
    <string name="drama">Drama</string>
    <string name="fantasy">Fantasy</string>
    <string name="historical">Historical</string>
    <string name="horror">Horror</string>
    <string name="mystery">Mystery</string>
    <string name="political">Political</string>
    <string name="romance">Romance</string>
    <string name="scienceFiction">Science Fiction</string>
    <string name="thriller">Thriller</string>
    <string name="western">Western</string>
    <string name="movieGenres">Favourite movie genres</string>
    <string name="selectMovieGenre">Select your favourite movie genres</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="none">None</string>
    <string name="electronic">Electronic</string>
    <string name="rock">Rock</string>
    <string name="jazz">Jazz</string>
    <string name="blues">Blues</string>
    <string name="dubstep">Dubstep</string>
    <string name="pop">Pop</string>
    <string name="techno">Techno</string>
    <string name="countryMusic">Country</string>
    <string name="indie">Indie</string>
    <string name="hiphop">Hip-Hop</string>
    <string name="reggaeton">Reggaeton</string>
    <string name="metal">Metal</string>
    <string name="classicalMusic">Classical music</string>
    <string name="reggae">Reggae</string>
    <string name="folk">Folk</string>
    <string name="alternative">Alternative</string>
    <string name="soul">Soul</string>
    <string name="selectMusicGenres">Select your favourite music genres</string>
    <string name="musicGenre">Favourite music genres</string>
    <string name="reading">Reading</string>
    <string name="travel">Travel</string>
    <string name="watchingTv">Watching TV</string>
    <string name="collecting">Collecting</string>
    <string name="music">Music</string>
    <string name="videogames">Video games</string>
    <string name="cinema">Cinema</string>
    <string name="exercise">Exercise</string>
    <string name="watchingSports">Watching sports</string>
    <string name="cycling">Cycling</string>
    <string name="cooking">Cooking</string>
    <string name="swimming">Swimming</string>
    <string name="camping">Camping</string>
    <string name="skiing">Skiing</string>
    <string name="writing">Writing</string>
    <string name="painting">Painting</string>
    <string name="dancing">Dancing</string>
    <string name="theater">Theater</string>
    <string name="hobbies">Hobbies</string>
    <string name="selectHobbies">Select your favourite hobbies</string>
    <string name="saveChanges">Save changes</string>
    <string name="changesSaved">Changes have been saved!</string>
    <string name="atLeast6">At least 6 characters</string>
    <string name="currentPassword">Current password</string>
    <string name="newPassword">New password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="updatePassword">Update password</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="yourEmail">Your email address</string>
    <string name="yourName">Your name</string>
    <string name="send">Send</string>
    <string name="uploading">Uploading</string>
    <string name="noImageSelected">No image selected</string>
    <string name="uploadInProgress">Upload in progress</string>
    <string name="search">Search...</string>
    <string name="reset">Reset</string>
    <string name="byClickingReset">By clicking RESET you will receive an email to reset your password</string>
    <string name="enterEmail">Enter your email address</string>
    <string name="emailSend">You have received an email to reset your password</string>
    <string name="newMessage">New message</string>
    <string name="noMoreUsers">There is no more users!</string>
    <string name="wrongPassword">Wrong password, try again</string>
    <string name="passwordUpdated">The password has been updated</string>
    <string name="profile">Profile</string>
    <string name="contactUs">Contact us</string>
    <string name="resetPassword">Reset password</string>
    <string name="beforeChat">Before start to search for a chat you need to fill your profile</string>
    <string name="image">Image</string>
    <string name="whichCriteria">By which criteria do you want to search?</string>
    <string name="movies">Movies genre</string>
    <string name="musicG">Music genre</string>
    <string name="noUserCriteria">There is no more users with the same criteria</string>
    <string name="checkpoint1">You have reached the first checkpoint, now you can send images!</string>
    <string name="checkpoint2">You have reached the second checkpoint, do you want to be able to see the profile of the other user and for him to see yours?</string>
    <string name="yes">Yes</string>
    <string name="checkpoint2accepted">Now you can see the other user\'s profile by clicking on his name!</string>
    <string name="deleteChat">Do you want to delete this chat?</string>
    <string name="delete">Delete</string>
    <string name="logout">Logout</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="chooseTheme">Choose theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="systemDefault">System default</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="chooseLanguage">Choose the language of the App</string>
    <string name="writeCorrectly">Remember to write correctly so that the translator can translate the text well!</string>
    <string name="writeCorrectly2">Write correctly!</string>
    <string name="deleteChatTitle">Delete chat</string>


</resources>
