<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activityRegisterLayout"
    tools:context="com.olivaguillem.RandomPeople.RegisterActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.16" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/Blues"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline65"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/Blues"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline67"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeatPassword"
        android:textColor="@color/Blues"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline71"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phoneNumber"
        android:textColor="@color/Blues"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline74"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/Blues"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline69"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextRegisterPhone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/edittext_border"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:paddingLeft="12dp"
        android:paddingRight="6dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintEnd_toStartOf="@+id/guideline125"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline73"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextRegisterUsername"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/edittext_border"
        android:inputType="textFilter"
        android:maxLines="1"
        android:paddingLeft="12dp"
        android:paddingRight="6dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toStartOf="@+id/guideline125"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline64"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextRegisterEmail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/edittext_border"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingLeft="12dp"
        android:paddingRight="6dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintEnd_toStartOf="@+id/guideline125"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline66"
        app:layout_constraintVertical_bias="1.0" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/edittext_border"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintEnd_toStartOf="@+id/guideline125"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline72"
        app:layout_constraintVertical_bias="0.332">

        <EditText
            android:id="@+id/editTextRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/imageButtonRegisterVisibleOff"
            android:background="#00000000"
            android:hint="@string/atLeast6"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="6dp"
            android:paddingRight="6dp" />

        <ImageButton
            android:id="@+id/imageButtonRegisterVisibleOff"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="7dp"
            android:background="@drawable/icon_visibility_off" />

        <ImageButton
            android:id="@+id/imageButtonRegisterVisible"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="7dp"
            android:background="@drawable/icon_visibility_on" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/edittext_border"
        app:layout_constraintBottom_toTopOf="@+id/guideline15"
        app:layout_constraintEnd_toStartOf="@+id/guideline125"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline68"
        app:layout_constraintVertical_bias="0.436">

        <EditText
            android:id="@+id/editTextRegisterPassword2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/imageButtonRegisterVisible2"
            android:background="#00000000"
            android:hint="@string/atLeast6"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="6dp"
            android:paddingRight="6dp" />

        <ImageButton
            android:id="@+id/imageButtonRegisterVisibleOff2"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="7dp"
            android:background="@drawable/icon_visibility_off" />

        <ImageButton
            android:id="@+id/imageButtonRegisterVisible2"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="7dp"
            android:background="@drawable/icon_visibility_on" />

    </RelativeLayout>

    <Button
        android:id="@+id/buttonRegisterCreateAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/createAccount"
        android:background="@drawable/button_border"
        android:textColor="@color/white"
        android:textSize="11dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintEnd_toStartOf="@+id/guideline17"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline126"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline64"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.11" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline68"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline71"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.41" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline73"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline74"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.51" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline72"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline69"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.31" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.31" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline67"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.21" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.26" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.46" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.56" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline125"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.84" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline126"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.64" />

</androidx.constraintlayout.widget.ConstraintLayout>
